# middleware/validate.js
@@ -8,6 +8,29 @@ const saveUser = (req, res, next) => {
     favoriteColor: "required|string",
     birthday: "string",
   };
+
+  validator(req.body, validationRule, {}, (err, status) => {
+    if (!status) {
+      res.status(412).send({
+        success: false,
+        message: "Validation failed",
+        data: err,
+      });
+    } else {
+      next();
+    }
+  });
+};
+
+const saveContact = (req, res, next) => {
+  const validationRule = {
+    firstName: "required|string",
+    lastName: "required|string",
+    email: "required|email", //test@test.com
+    favoriteColor: "required|string",
+    birthday: "string",
+  };
+
   validator(req.body, validationRule, {}, (err, status) => {
     if (!status) {
       res.status(412).send({
@@ -23,4 +46,5 @@ const saveUser = (req, res, next) => {
 
 module.exports = {
   saveUser,
+  saveContact,
 };
